workloads/qbittorrent/kustomize/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: qbittorrent
  labels:
    app.kubernetes.io/name: qbittorrent

spec:
  replicas: 1
  revisionHistoryLimit: 3

  strategy:
    type: Recreate # To prevent PVC lockups.

  selector:
    matchLabels:
      app.kubernetes.io/name: qbittorrent

  template:
    metadata:
      labels:
        app.kubernetes.io/name: qbittorrent

    spec:
      containers:
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:latest

          ports:
            # NOTE: You need to set "bypass_local_auth":true. Either in the WebUI and then restart the pod, or in the config file and then restart the pod.
            - name: qb-webui
              containerPort: 8080
              protocol: TCP
            # All other qB ports are unspecified to prevent me from mistakenly making services to route to them.

          # resources:
          #   limits:
          #     cpu:  0m
          #     memory: 0Mi
          #   requests:
          #     cpu: 0m
          #     memory: 0Mi

          # TODO: Probes

          volumeMounts:
            - name: qbittorrent-data
              subPath: qB-config/
              mountPath: /config
            - name: qbittorrent-downloads
              subPath: qB-downloads/
              mountPath: /downloads

      volumes:
        - name: qbittorrent-data
          persistentVolumeClaim:
            claimName: qbittorrent-data
        - name: qbittorrent-downloads
          persistentVolumeClaim:
            claimName: media
