workloads/qbittorrent/kustomize/base/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: qbittorrent-https

spec:
  parentRefs:
    - name: primary-gateway
      namespace: envoy-gateway-system
      sectionName: https

  hostnames:
    - qbittorrent.invalid.example
    - qb.invalid.example

  rules:
    - backendRefs:
        - name: qbittorrent # SVC name (internal IP:PORT).
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: qbittorrent-http

spec:
  parentRefs:
    - name: primary-gateway
      namespace: envoy-gateway-system
      sectionName: http

  hostnames:
    - qbittorrent.invalid.example
    - qb.invalid.example

  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
